--- a/tjq-seajs/indexSeaAndGrunt.html
+++ b/tjq-seajs/indexSeaAndGrunt.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<script src="./sea/sea.js"></script>
+	<style>
+		
+	</style>
 	<script>
 	
-	seajs.use('./seaAndGruntJs/moduleMain.js');
+seajs.use('./seaAndGruntJs/moduleMain.js');
 	
 	
 	</script>
@@ -15,6 +18,5 @@
 </head>
 <body>
 123
-	
 </body>
 </html>
