--- a/designPatterns/index.html
+++ b/designPatterns/index.html
@@ -3,82 +3,49 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style>
+
+		div{
+			width: 100px;
+			height: 100px;
+			background: red;
+			margin-bottom: 10px;
+		}
+
+	</style>
 	<script>
+function a(){alert(arguments[0]);}
+
+
+window.onload=function(){
 	function l(){console.log(arguments[0]);}
-// extend BaiDu
-function inhertObject(o){
-	function F(){};
-	F.prototype=o;
-	return new F();
-}
-
-function a(o){
-	function F(){};
-	F.prototype=o;
-	return F();
-}
-
-function father(){
-	this.name='父亲';
-}
-father.prototype={
-	getName:function(){
-		l(this.name);
+	var oDiv=document.getElementsByTagName('div');
+	for(var i=0;i<oDiv.length;i++){
+		(function(i){
+			oDiv[i].onclick=function(){
+				a(i);
+			}
+		})(i);
 	}
-}
-
-function son(name){
-	this.name=name;
-}
-
-var p=inhertObject(new father());
-
-son.prototype=p;
-
-
-//l(Object.prototype.toString.call(p));
+var myDivLeft=document.getElementById('div');
+var myFinall=document.getElementById('mySpan');
 
 
 
-var sonObj=new son('儿子');
 
-sonObj.getName();
-
-
-/*function inheritPrototype(subClass,superClass){
-	var p=inhertObject(superClass.prototype);
-	p.constructor=subClass;
-	subClass.prototype=p;
-}
-
-function superClass(name){
-	this.name=name;
-	this.colors=['red','blue','green'];
-}
-superClass.prototype.getName=function(){
-	l(this.name);
-}
-
-function subClass(name,time){
-	superClass.call(this,name);
-	this.time=time;
-}
-
-inheritPrototype(subClass,superClass);
-
-subClass.prototype.getTime=function(){
-	l(this.time);
-}
-var instance1=new subClass('js book',2014);
-var instance2=new subClass('css book',2015);
-
-instance1.colors.push('black');*/
+	}
 
 
 
 	</script>
+	
 </head>
 <body>
+<div>1</div>
+<div>2</div>
+<div>3</div>
+<div>4</div>
+<div>5</div>
 	
 </body>
 </html>
