--- a/designPatterns/index.html
+++ b/designPatterns/index.html
@@ -2,39 +2,32 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	<style>
-*{
-padding: 0;
-margin: 0
+	<title>DejaVu Sans Mono</title>
+	<script>
+function A(s){alert(s)}function C(s){console.log(s)}function T(a,b){if(a===b){return console.log('全等!');}if(a==b){return console.log('表面等!')}return console.log('不等')}
+ast
+var Plane=function(){
+	this.blood=100;
+	this.attacklevel=1;
+	this.defenselevel=1;
+}
+var plane=new Plane();
+plane.blood=500;
+plane.attacklevel=10;
+plane.defenselevel=7;
+
+function clone(obj){
+	function F(){}
+	F.prototype=obj;
+	return new F();
 }
 
-#div{
-width: 100px;
-height: 100px;
-background: red;
-}
-
-	</style>
-
-	
-	
+var clonePlane=clone(plane);
+L(clonePlane.blood)
+	</script>
 </head>
 <body>
-<div id="div"></div>
 	<script>
-function a(){alert(arguments[0]);}
-function l(){console.log(arguments[0]);}
-function i(){return document.getElementById(arguments[0]);}
-
-oDiv.onclick=function(){
-	var xhr=new XMLHttpRequest();
-	xhr.open('');
-	xhr.send();
-	xhr.onreadystatechange=function(){
-	}
-}
-
 
 
 
