--- a/react/index.html
+++ b/react/index.html
@@ -3,32 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-<style>
-#test{
-	width: 500px;height: 500px;background: green;position: absolute;
-	top:50px;left: 0;box-shadow: 10px 10px 10px gray;border-radius: 20px
-}
-	*{margin:0;padding: 0}
-
-#inputtext{
-	width: 300px;height: 100px;border:5px solid black;font-size: 16px;
-}
-
-
-</style>
-</head>
-<body>
-I'm test word.
-	<div id="test">
-	<input type="text" name="" placeholder="用IE浏览器看一哈点这里可以输入文字不" id="inputtext">
-</div>
-
-<script>
-//detachEvent
-var myObj=id('test');
-var fatherDiv=id('fatherDiv');
-function id(id){return document.getElementById(id);}
+<script src="js/react.js"></script>
+<script src="js/react-dom.js"></script>
+<script src="js/browser.min.js"></script>
+<script type="text/babel">
+var names=['a','b','c'];
+ReactDOM.render(
+	<div>
+		{
+			names.map(function(name){
+				return <div>Hello,{name}</div>
+			})
+		}
+	</div>,
+	document.getElementById('demo')
+	)
 
 </script>
+</head>
+<body>
+<div id="demo"></div>
 </body>
 	</html>
