--- a/fetjqcnIndex/webindex/index.html
+++ b/fetjqcnIndex/webindex/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>webindex</title>
+    <link rel="stylesheet" type="text/css" href="fetjqicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/images/fetjqicon.ico">
   </head>
   <body>
     <div id="app"></div>
