--- a/fetjqcnIndex/webindex/index.html
+++ b/fetjqcnIndex/webindex/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>webindex</title>
+    <title>fetjq</title>
     <link rel="stylesheet" type="text/css" href="fetjqicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/static/images/fetjqicon.ico">
   </head>
