--- a/npmAndyarn/常用npm包和新特性.html
+++ b/npmAndyarn/常用npm包和新特性.html
@@ -14,7 +14,9 @@
 	v-charts//vue图表组件
 	vue-quill-editor//富文本
 	xlsx//处理excel文件    
-
+	timer//处理定时器
+	
+	//padStart()和padEnd()，首尾补0
 </body>
 <script>
 	//	file-saver用法,	结合ajax下载自定义文件,自定义类型，此类型会转成arraybuffer格式，catch时的数据也被转换,arraybuffer转成json时可以参考下面三行
